fixed spacing of songs

--- a/client/src/components/artists/Artists.css
+++ b/client/src/components/artists/Artists.css
@@ -60,6 +60,6 @@ p{
 
 }
 
-.songDetails{
-  margin-top: 50px;
+.songz{
+  padding: 50px;
 }
